# concurrent-haskell-verification

./: .gitignore  Everything.agda  README.md  project.cabal
demo/: Main.hs
lib/: Programs.hs
lib/Data/: C.hs  CWriter.hs  Channel.hs  IOs.hs  MVar.hs  MVarIOs.hs  MonadTrans.hs  State.hs  Writer.hs
src/: Programs.agda
src/Archive/: C_Pos.agda  C_Type  MVars.agda  PosMonad.agda  Ungetchan.agda
src/Data/: C.agda  CWriter.agda  Channel.agda  IOs.agda  MVar.agda  MVar2.agda  MVarIOs.agda  MonadTrans.agda  PosMonad.agda  ProofLib.agda  State.agda  Writer.agda  Writer2.agda
src/Doc/: IO.md  Log.md  WriterTuple.md
